kubernetes/main/apps/default/nas/certmate/service.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: certmate
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.3
    ports:
      - port: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: certmate
  namespace: default
spec:
  ports:
    - port: 8088
      targetPort: 8088
      protocol: TCP
