kubernetes/main/apps/default/nas/certmate/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-certmate
  namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: &host certmate.garb.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: certmate
                port:
                  number: 8000
  tls:
    - hosts:
        - *host
      secretName: wildcard-cert-tls
